// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Empty line tokenization Zero-length input performs as specified 1`] = `
Object {
  "_document": Object {
    "depth": 0,
    "elements": Array [],
    "type": Symbol(Document),
  },
  "_lineCount": 1,
  "_meta": Array [],
}
`;

exports[`Empty line tokenization performs as specified 1`] = `
Object {
  "_document": Object {
    "depth": 0,
    "elements": Array [],
    "type": Symbol(Document),
  },
  "_lineCount": 9,
  "_meta": Array [],
}
`;
